# RustFrontEnd

./: Cargo.toml  README.md  index.html  index.scss  style.css
src/: main.rs  message.rs  random.rs  snowflake.rs
